--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>TMN 使用機材一覧</title>
+  <meta name="description" content="TMNのライブで使用された機材をまとめたデータベース。小室哲哉のJD-800など、使用シンセも詳しく掲載。">
+  <meta name="keywords" content="TMN, 小室哲哉, JD-800, ライブ機材, シンセサイザー, TM NETWORK">
+  <title>TMN使用機材まとめ - ライブ別リスト</title>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
   <style>
     body { font-family: sans-serif; margin: 2em; }
