--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta property="og:title" content="TM NETWORK ライブ使用機材まとめ表">
+  <meta property="og:description" content="ライブ別に機材を絞り込めるインタラクティブな表です。TMNの使用シンセをファン目線でまとめました。">
+  <meta property="og:image" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/ogp.jpg">
+  <meta property="og:url" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/">
+  <meta property="og:type" content="website">
+
   <meta name="description" content="TMNのライブで使用された機材をまとめたデータベース。小室哲哉のJD-800など、使用シンセも詳しく掲載。">
   <meta name="keywords" content="TMN, 小室哲哉, JD-800, ライブ機材, シンセサイザー, TM NETWORK">
   <title>TMN使用機材まとめ - ライブ別リスト</title>
