--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta property="og:title" content="TM NETWORK ライブ使用機材まとめ表">
   <meta property="og:description" content="ライブ別に機材を絞り込めるインタラクティブな表です。TMNの使用シンセをファン目線でまとめました。">
-  <meta property="og:image" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/ogp.jpg">
+  <meta property="og:image" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/ogp.png">
   <meta property="og:url" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/">
   <meta property="og:type" content="website">
 
