--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta property="og:image" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/ogp.jpg">
   <meta property="og:url" content="https://y-noiz.github.io/TMN_GROOVE_GEAR/">
   <meta property="og:type" content="website">
-
   <meta name="description" content="TMNのライブで使用された機材をまとめたデータベース。小室哲哉のJD-800など、使用シンセも詳しく掲載。">
   <meta name="keywords" content="TMN, 小室哲哉, JD-800, ライブ機材, シンセサイザー, TM NETWORK">
   <title>TMN使用機材まとめ - ライブ別リスト</title>
@@ -25,425 +24,86 @@
       margin-left: 4px;
     }
   </style>
+  <p style="font-size: 0.8em; color: gray;">※2025年4月26日：「メーカー」カラム追加、並び替え機能に対応しました。</p>
 </head>
 <body>
 
   <h2>TMN ライブ別使用機材リスト</h2>
 
-  <table id="gearTable" class="display">
+  <div>
+    <label class="checkbox-label">RHYTHM RED TMN TOUR
+      <input type="checkbox" class="live-filter" value="RHYTHM RED TMN TOUR">
+    </label>
+    <label class="checkbox-label">TOUR TMN EXPO
+      <input type="checkbox" class="live-filter" value="TOUR TMN EXPO">
+    </label>
+    <label class="checkbox-label">TOUR TMN EXPO FINAL CRAZY 4 YOU
+      <input type="checkbox" class="live-filter" value="TOUR TMN EXPO FINAL CRAZY 4 YOU">
+    </label>
+    <label class="checkbox-label">TMN 4001 DAYS GROOVE
+      <input type="checkbox" class="live-filter" value="TMN 4001 DAYS GROOVE">
+    </label>
+  </div>
+
+  <table id="gearTable" class="display" style="width:100%">
     <thead>
       <tr>
         <th>ジャンル</th>
+        <th>メーカー</th>
         <th>機材名</th>
-        <th>
-          <label class="checkbox-label">RHYTHM RED TMN TOUR
-            <input type="checkbox" class="live-filter" value="RHYTHM RED TMN TOUR">
-          </label>
-        </th>
-        <th>
-          <label class="checkbox-label">TOUR TMN EXPO
-            <input type="checkbox" class="live-filter" value="TOUR TMN EXPO">
-          </label>
-        </th>
-        <th>
-          <label class="checkbox-label">TOUR TMN EXPO FINAL CRAZY 4 YOU
-            <input type="checkbox" class="live-filter" value="TOUR TMN EXPO FINAL CRAZY 4 YOU">
-          </label>
-        </th>
-        <th>
-          <label class="checkbox-label">TMN 4001 DAYS GROOVE
-            <input type="checkbox" class="live-filter" value="TMN 4001 DAYS GROOVE">
-          </label>
-        </th>
+        <th>RHYTHM RED TMN TOUR</th>
+        <th>TOUR TMN EXPO</th>
+        <th>TOUR TMN EXPO FINAL CRAZY 4 YOU</th>
+        <th>TMN 4001 DAYS GROOVE</th>
         <th>備考</th>
       </tr>
     </thead>
-<tbody><tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>ARP solina String-Ensemble</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>E-mu MORPHEUS</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>E-mu PROTEUS/1</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>E-mu PROTEUS/2</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>ensoniq VFX</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td>TOUR TMN EXPO FINAL CRAZY 4 YOUではVFX-SDも</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>HAMMOND L-112</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>KORG 01/W</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>TMN 4001 DAYS GROOVEでは01R/W</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>KORG M1R</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>KORG WAVESTATION</td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td>TMN 4001 DAYS GROOVEではWAVESTATION A/D</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>moog memorymoog</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>moog System 35</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>Roland JD-800</td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td>TMN 4001 DAYS GROOVEではJD-990も</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>Roland JV-880</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>STUDIO ELECTRONICS MIDIMOOG</td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>Synclavier 6400</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>Tetsuya&#39;s Mind Control</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>waldorf WAVE</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA EOS B500</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>TMN 4001 DAYS GROOVEではB700</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA KX5</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA MC2408M</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA P-500</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA SY99</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>RHYTHM RED TMN TOURではSY77</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA TG77</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA TX802</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td>TOUR TMN EXPOではDX7II-FDも</td>
-</tr>
-<tr>
-<td>シンセサイザー・キーボード・音源</td>
-<td>YAMAHA VP1</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>ドラム・パーカッション</td>
-<td>SIMMONS SDX</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>ドラム・パーカッション</td>
-<td>YAMAHA PTT8</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>ドラム・パーカッション</td>
-<td>YAMAHA RX5</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>ドラム・パーカッション</td>
-<td>Zildjian 16&quot; CRASH, 16&quot; medium thin, 10&quot; SPLASH, 18&quot; China</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>エフェクター・ミキサー</td>
-<td>t.c. electronic TC2290</td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td>TOUR TMN EXPOではTC1210も</td>
-</tr>
-<tr>
-<td>エフェクター・ミキサー</td>
-<td>Eventide H3000 SE</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>エフェクター・ミキサー</td>
-<td>ROCKTRON HUSH IIB</td>
-<td>✓</td>
-<td></td>
-<td></td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>エフェクター・ミキサー</td>
-<td>YAMAHA DMP7</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td>TOUR TMN EXPO, TOUR TMN EXPO FINAL CRAZY 4 YOUではDMP11も</td>
-</tr>
-<tr>
-<td>エフェクター・ミキサー</td>
-<td>YAMAHA MV802, MV1602</td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>サンプラー</td>
-<td>AKAI DD1000</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-<tr>
-<td>サンプラー</td>
-<td>AKAI S1100</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>サンプラー</td>
-<td>ensoniq ASR-10R</td>
-<td></td>
-<td></td>
-<td></td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>サンプラー</td>
-<td>Roland S-550</td>
-<td></td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td> </td>
-</tr>
-<tr>
-<td>サンプラー</td>
-<td>YAMAHA TX16W</td>
-<td>✓</td>
-<td>✓</td>
-<td>✓</td>
-<td></td>
-<td> </td>
-</tr>
-</tbody>
+    <tbody></tbody>
   </table>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script>
     $(document).ready(function () {
-      const table = $('#gearTable').DataTable({
-        paging: false,
-        info: false, // ← 表示件数のメッセージを非表示
-        columnDefs: [
-          { orderable: true, targets: [0, 1] },
-          { orderable: false, targets: '_all' }
-        ]
-      });
+      Papa.parse("TMN_GROOVE_GEAR.csv", {
+        download: true,
+        header: true,
+        complete: function (results) {
+          const table = $('#gearTable').DataTable({
+            data: results.data,
+            columns: [
+              { data: "ジャンル" },
+              { data: "メーカー" },
+              { data: "機材名" },
+              { data: "RHYTHM RED TMN TOUR" },
+              { data: "TOUR TMN EXPO" },
+              { data: "TOUR TMN EXPO FINAL CRAZY 4 YOU" },
+              { data: "TMN 4001 DAYS GROOVE" },
+              { data: "備考" }
+            ],
+            paging: false,
+            info: false,
+            columnDefs: [
+              { orderable: true, targets: [0, 1, 2] },
+              { orderable: false, targets: '_all' }
+            ]
+          });
 
-      $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
-        const selectedLives = $('.live-filter:checked').map(function () {
-          return $(this).val();
-        }).get();
+          $.fn.dataTable.ext.search.push(function (settings, data, dataIndex, rowData) {
+            const selectedLives = $('.live-filter:checked').map(function () {
+              return $(this).val();
+            }).get();
 
-        if (selectedLives.length === 0) return true;
+            if (selectedLives.length === 0) return true;
 
-        // AND条件で各列に✓があるかチェック
-        return selectedLives.every(live => {
-          const colIndex = $('#gearTable thead th').filter(function () {
-            return $(this).text().trim().startsWith(live);
-          }).index();
+            return selectedLives.every(live => rowData[live] === '✓');
+          });
 
-          return colIndex > -1 && data[colIndex] === '✓';
-        });
-      });
-
-      $('.live-filter').on('change', function () {
-        table.draw();
+          $('.live-filter').on('change', function () {
+            table.draw();
+          });
+        }
       });
     });
   </script>
