--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         ]
       });
 
-      Papa.parse('gear.csv', {
+      Papa.parse('TMN_GROOVE_GEAR.csv', {
         download: true,
         header: true,
         complete: function (results) {
