--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
 <h2>TMN ライブ別使用機材リスト</h2>
 
 <table id="gearTable" class="display" style="width:100%">
-  <thead>
-    <tr>
-      <th>ジャンル</th>
-      <th>メーカー</th>
-      <th>機材名</th>
-      <th>
-        <label class="checkbox-label">RHYTHM RED TMN TOUR
-          <input type="checkbox" class="live-filter" value="RHYTHM RED TMN TOUR">
-        </label>
-      </th>
-      <th>
-        <label class="checkbox-label">TOUR TMN EXPO
-          <input type="checkbox" class="live-filter" value="TOUR TMN EXPO">
-        </label>
-      </th>
-      <th>
-        <label class="checkbox-label">TOUR TMN EXPO FINAL CRAZY 4 YOU
-          <input type="checkbox" class="live-filter" value="TOUR TMN EXPO FINAL CRAZY 4 YOU">
-        </label>
-      </th>
-      <th>
-        <label class="checkbox-label">TMN 4001 DAYS GROOVE
-          <input type="checkbox" class="live-filter" value="TMN 4001 DAYS GROOVE">
-        </label>
-      </th>
-      <th>備考</th>
-    </tr>
-  </thead>
+ <thead>
+  <tr>
+    <th>ジャンル</th>
+    <th>メーカー</th>
+    <th>機材名</th>
+    <th>
+      <div style="white-space: nowrap; font-size: 0.85em;">
+        RHYTHM RED TMN TOUR <input type="checkbox" class="live-filter" value="RHYTHM RED TMN TOUR">
+      </div>
+    </th>
+    <th>
+      <div style="white-space: nowrap; font-size: 0.85em;">
+        TOUR TMN EXPO <input type="checkbox" class="live-filter" value="TOUR TMN EXPO">
+      </div>
+    </th>
+    <th>
+      <div style="white-space: nowrap; font-size: 0.85em;">
+        TMN EXPO FINAL CRAZY 4 YOU <input type="checkbox" class="live-filter" value="TOUR TMN EXPO FINAL CRAZY 4 YOU">
+      </div>
+    </th>
+    <th>
+      <div style="white-space: nowrap; font-size: 0.85em;">
+        TMN 4001 DAYS GROOVE <input type="checkbox" class="live-filter" value="TMN 4001 DAYS GROOVE">
+      </div>
+    </th>
+    <th>備考</th>
+  </tr>
+</thead>
   <tbody></tbody>
 </table>
 
