--- a/index.html
+++ b/index.html
@@ -20,97 +20,101 @@
 </head>
 <body>
 
-<h2>TMN ライブ別使用機材リスト</h2>
+  <h2>TMN ライブ別使用機材リスト</h2>
 
-<table id="gearTable" class="display" style="width:100%">
- <thead>
-  <tr>
-    <th>ジャンル</th>
-    <th>メーカー</th>
-    <th>機材名</th>
-    <th>
-      <div style="white-space: nowrap; font-size: 0.85em;">
-        RHYTHM RED TMN TOUR <input type="checkbox" class="live-filter" value="RHYTHM RED TMN TOUR">
-      </div>
-    </th>
-    <th>
-      <div style="white-space: nowrap; font-size: 0.85em;">
-        TOUR TMN EXPO <input type="checkbox" class="live-filter" value="TOUR TMN EXPO">
-      </div>
-    </th>
-    <th>
-      <div style="white-space: nowrap; font-size: 0.85em;">
-        TMN EXPO FINAL CRAZY 4 YOU <input type="checkbox" class="live-filter" value="TOUR TMN EXPO FINAL CRAZY 4 YOU">
-      </div>
-    </th>
-    <th>
-      <div style="white-space: nowrap; font-size: 0.85em;">
-        TMN 4001 DAYS GROOVE <input type="checkbox" class="live-filter" value="TMN 4001 DAYS GROOVE">
-      </div>
-    </th>
-    <th>備考</th>
-  </tr>
-</thead>
-  <tbody></tbody>
-</table>
+  <table id="gearTable" class="display">
+    <thead>
+      <tr>
+        <th>ジャンル</th>
+        <th>メーカー</th>
+        <th>機材名</th>
+        <th>
+          <label class="checkbox-label">RHYTHM RED TMN TOUR
+            <input type="checkbox" class="live-filter" value="RHYTHM RED TMN TOUR">
+          </label>
+        </th>
+        <th>
+          <label class="checkbox-label">TOUR TMN EXPO
+            <input type="checkbox" class="live-filter" value="TOUR TMN EXPO">
+          </label>
+        </th>
+        <th>
+          <label class="checkbox-label">TOUR TMN EXPO FINAL CRAZY 4 YOU
+            <input type="checkbox" class="live-filter" value="TOUR TMN EXPO FINAL CRAZY 4 YOU">
+          </label>
+        </th>
+        <th>
+          <label class="checkbox-label">TMN 4001 DAYS GROOVE
+            <input type="checkbox" class="live-filter" value="TMN 4001 DAYS GROOVE">
+          </label>
+        </th>
+        <th>備考</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 
-<!-- ライブラリ読み込み -->
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
-<script>
-  $(document).ready(function () {
-    const table = $('#gearTable').DataTable({
-      paging: false,
-      info: false,
-      columnDefs: [
-        { orderable: true, targets: [0, 1, 2] },
-        { orderable: false, targets: '_all' }
-      ]
-    });
-
-    // カスタムフィルター：AND条件
-    $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
-      const selectedLives = $('.live-filter:checked').map(function () {
-        return $(this).val();
-      }).get();
-
-      if (selectedLives.length === 0) return true;
-
-      return selectedLives.every(live => {
-        const colIndex = $('#gearTable thead th').filter(function () {
-          return $(this).text().trim().startsWith(live);
-        }).index();
-        return data[colIndex] === '✓';
+  <script>
+    $(document).ready(function () {
+      const table = $('#gearTable').DataTable({
+        paging: false,
+        info: false,
+        columnDefs: [
+          { orderable: true, targets: [0, 1, 2] },
+          { orderable: false, targets: '_all' }
+        ]
       });
-    });
 
-    $('.live-filter').on('change', function () {
-      table.draw();
-    });
+      function loadCSV() {
+        Papa.parse('TMN_GROOVE_GEAR.csv', {
+          download: true,
+          header: true,
+          complete: function(results) {
+            results.data.forEach(function(row) {
+              if (!row['ジャンル']) return; // 空行ガード
 
-    // CSV読み込みと表示
-    Papa.parse('TMN_GROOVE_GEAR.csv', {
-      download: true,
-      header: true,
-      complete: function (results) {
-        results.data.forEach(row => {
-          table.row.add([
-            row['ジャンル'] || '',
-            row['メーカー'] || '',
-            row['機材名'] || '',
-            row['RHYTHM RED TMN TOUR'] || '',
-            row['TOUR TMN EXPO'] || '',
-            row['TOUR TMN EXPO FINAL CRAZY 4 YOU'] || '',
-            row['TMN 4001 DAYS GROOVE'] || '',
-            row['備考'] || ''
-          ]).draw(false);
+              table.row.add([
+                row['ジャンル'],
+                row['メーカー'],
+                row['機材名'],
+                row['RHYTHM RED TMN TOUR'] === '✓' ? '✓' : '',
+                row['TOUR TMN EXPO'] === '✓' ? '✓' : '',
+                row['TOUR TMN EXPO FINAL CRAZY 4 YOU'] === '✓' ? '✓' : '',
+                row['TMN 4001 DAYS GROOVE'] === '✓' ? '✓' : '',
+                row['備考'] || ''
+              ]).draw(false);
+            });
+          }
         });
       }
-    });
-  });
-</script>
 
+      loadCSV();
+
+      $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
+        const selectedLives = $('.live-filter:checked').map(function () {
+          return $(this).val();
+        }).get();
+
+        if (selectedLives.length === 0) return true;
+
+        return selectedLives.every(live => {
+          const colIndex = $('#gearTable thead th').filter(function () {
+            return $(this).text().trim().startsWith(live);
+          }).index();
+
+          return colIndex > -1 && data[colIndex] === '✓';
+        });
+      });
+
+      $('.live-filter').on('change', function () {
+        table.draw();
+      });
+    });
+  </script>
 </body>
 </html>
