--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <script>
 $(document).ready(function() {
   const liveInfos = [
-    { name: "RHYTHM RED TMN TOUR", short: "RRTT.svg" },
-    { name: "TOUR TMN EXPO", short: "TTE.svg" },
-    { name: "TOUR TMN EXPO FINAL CRAZY 4 YOU", short: "C4U.svg" },
-    { name: "TMN 4001 DAYS GROOVE", short: "LG.svg" }
+    { name: "RHYTHM RED TMN TOUR", short: "RRTT.png" },
+    { name: "TOUR TMN EXPO", short: "TTE.png" },
+    { name: "TOUR TMN EXPO FINAL CRAZY 4 YOU", short: "C4U.png" },
+    { name: "TMN 4001 DAYS GROOVE", short: "LG.png" }
   ];
 
   const liveColumnIndexMap = {
